--- a/Unity notes/二.角色移动跳跃代码.md
+++ b/Unity notes/二.角色移动跳跃代码.md
@@ -46,12 +46,26 @@ public class playercontrol : MonoBehaviour
 
 ## 1.水平移动
 
+> Horizontal
+>
+> Rigidbody2D
+>
+> Input.***GetAxis***
+>
+> Input.***GetAxisRaw***
+>
+> Time.deltaTime：完成上一帧所用的时间（以秒为单位），Time.fixedDeltaTime配合fixedupdate使用
+>
+> Input.GetButtonDown("Jump")
+
 ```c#
-public Rigidbody2D rb;
+public Rigidbody2D rb;//先定义组件
 public float speed;//定义变量
 ```
 
 1.    ` float horizontalmove = Input.GetAxis("Horizontal");`使用使用    Input.***GetAxis***    horizontalmove获取输入值1～１
+
+- horizontalmove -1时向左移动，1时向右移动
 
 ```c#
 		if (horizontalmove != 0)//判断角色左右移动
@@ -65,8 +79,10 @@ public float speed;//定义变量
 
 3.`float facedirection = Input.GetAxisRaw("Horizontal");`使用    Input.***GetAxisRaw***    horizontalmove获取输入值1,-1,0
 
+- 因为localScale为-1时角色朝向左，1朝向右，所以通过localScale改变角色朝向。
+
 ```c#
-		if (facedirection != 0)//判断角色转向
+		if (facedirection != 0)//判断角色朝向
         {
             transform.localScale = new Vector3(facedirection, 1, 1);
             
@@ -96,7 +112,7 @@ public float jumpforce;
 
 speed * Time.deltaTime可使即便是掉帧或帧数不同的情况角色移动相对不变。
 
-２.**Input.GetButtonDown("buttonName")描述**：获取按下的按键。需要从 [Update](https://docs.unity.cn/cn/2019.4/ScriptReference/MonoBehaviour.Update.html) 函数调用该函数（因为每帧都会重置状态）
+２.**Input.GetButtonDown("buttonName")描述**：获取按下的按键，按下时返回true，需要从 [Update](https://docs.unity.cn/cn/2019.4/ScriptReference/MonoBehaviour.Update.html) 函数调用该函数（因为每帧都会重置状态）
 
 ３.在水平移动代码中也可加入* Time.deltaTime  改成
 
