--- a/Unity notes/五.添加物品Cheery.md
+++ b/Unity notes/五.添加物品Cheery.md
@@ -1,10 +1,86 @@
 # 五.添加物品Cheery
 
-添加 Sprite 拖入Cherry图渲染
-添加动画组件 Animator 
-创建 animation controller添加到 Animator
-创建Animation-改 P P U-拖入动画-改samples
-box collider2D
-勾选Is T（）
-代码
+> 添加 Sprite 拖入Cherry图渲染
+> 添加动画组件 Animator 
+> 创建 animation controller添加到 Animator
+> 创建Animation-改 P P U-拖入动画-改samples
+> box collider2D
+> 勾选Is T（）
+
+## 1.实现"吃到”Cheery的效果
+
+### 碰撞检测
+
+- 要产生碰到Cheery时Cheery消失的效果，需要判定是否碰到了Cheery
+
+- 怎么判定碰到了Cherry？
+
+  **为Cherry加Tag**
+
+```c#
+private void OnTriggerEnter2D(Collider2D collision)//若另一个配置器2D进入了触发器，则调用onTriggerEnter2D
+    {
+		if(collision.tag == "Collection")//如果碰撞物体的标签为Collection
+        {
+            Destroy(collision.gameObject);//销毁当前的游戏体
+        }
+    }
+```
+
+
+
+
+
+## 2.显示"吃到"的个数
+
+### 计数
+
+- 先声明变量`public int Cherry = 0;`
+
+- `OnTriggerEnter2D(Collider2D collision)`函数的内置参数collision代表碰撞的物体
+
+- 
+
+  ```c#
+  private void OnTriggerEnter2D(Collider2D collision)//函数的内置参数collision
+      {
+  		if(collision.tag == "Collection")
+          {
+              Destroy(collision.gameObject);
+              Cheery +=1;//等同于Cheery=Cheery+1；
+          }
+      }
+  ```
+
+
+
+> - 模板
+>
+> 把层次面版中的player，Cheery拖入项目面板中可创建一个模板（属性都与原来设定的相同），若改变模板属性则原来的也一起改变
+>
+> - 编辑地图
+>
+> 编辑Sorting Layer
+>
+> 在同一个Sorting Layer也可以通过设置数字来设置谁前谁后
+>
+> 
+
+
+
+
+
+### 显示
+
+- 使用UI显示（见七）
+
+
+
+
+
+
+
+
+
+
 
