--- a/Unity notes/09.敌人移动.md
+++ b/Unity notes/09.敌人移动.md
@@ -2,6 +2,10 @@
 
 # 九.敌人移动
 
+
+
+
+
 ```c#
 using System.Collections;
 using System.Collections.Generic;
@@ -43,7 +47,7 @@ public class Enemy_Frog : MonoBehaviour
             rb.velocity = new Vector2(Speed, rb.velocity.y);
             if (transform.position.x>rightpoint.position.x)
             {
-                transform.localScale = new Vector3(-1, 1, 1);//-1面向右
+                transform.localScale = new Vector3(1, 1, 1);//1面向左
                 Faceleft = true;
             }
         }
@@ -63,7 +67,7 @@ public class Enemy_Frog : MonoBehaviour
     void Start()
     {
         rb = GetComponent<Rigidbody2D>();//rb获得组件刚体
-        transform.DetachChildren();
+        transform.DetachChildren();//分离父子项目间的关系
     }
 ```
 
@@ -77,7 +81,7 @@ public class Enemy_Frog : MonoBehaviour
 
 ```c#
 leftx = leftpoint.position.x;
-rightx = leftpoint.position.x;
+rightx = rightpoint.position.x;
 ```
 
 ```c#
@@ -112,7 +116,7 @@ public class Enemy_Frog : MonoBehaviour
         rb = GetComponent<Rigidbody2D>();//rb获得组件刚体
         transform.DetachChildren();
         leftx = leftpoint.position.x;
-        rightx = leftpoint.position.x;
+        rightx = rightpoint.position.x;
         Destroy(leftpoint.gameObject);//销毁左右点
         Destroy(rightpoint.gameObject);
     }
@@ -139,7 +143,7 @@ public class Enemy_Frog : MonoBehaviour
             rb.velocity = new Vector2(Speed, rb.velocity.y);
             if (transform.position.x>rightx)//if (transform.position.x>rightpoint.position.x)
             {
-                transform.localScale = new Vector3(-1, 1, 1);//-1面向右
+                transform.localScale = new Vector3(1, 1, 1);//1面向左
                 Faceleft = true;
             }
         }
