--- a/Unity notes/问题汇总.md
+++ b/Unity notes/问题汇总.md
@@ -25,3 +25,13 @@
 
 8.把人物放在老鹰上面降落，会一直触发弹跳和消灭动画，直到被弹走
 
+9.音频添加
+
+```c#
+    public void Death()
+    {
+        //deathAudio.Play();加在这里后老鹰无法销毁，会留着个静态图上下移动
+        Destroy(gameObject);
+    }
+```
+
