--- a/Unity notes/问题汇总.md
+++ b/Unity notes/问题汇总.md
@@ -14,6 +14,14 @@
 
 4.按空格键它并不会进行跳跃，空格键本身是没问题的，得按好几次它才会跳一下，
 
+GetButton需要在update()中调用
+
+横向使用的是2D物理向量(rigidbody2D)为他添加力的移动,需要用fixedupdate()——fixedupdate比update每秒钟调用的次数更多，而且能让2D物理系统更顺滑，fixedupdate要使用Time.fixedDeltaTime弥补时间的流失。update中使用Time.deltaTime
+
+
+
+
+
 5.摩擦力改成0后，在地上会打滑怎么办……？**不要写if(horizontal move!=0)**
 
 6.问下关于摄像机的问题，scene面板正常，点测试的时候game可以看到，但是camera preview和非测试的game面板都是蓝屏，怎么样可以调回来呢？
@@ -35,3 +43,20 @@
     }
 ```
 
+10.下蹲
+
+**bug**:在跑动时按下蹲能以跑动动画穿过障碍物。**因为没设置跑动到下蹲的动画转换,以及动画的启用**
+
+11.进入另一个场景
+
+想请问下如果我想在进入房子的条件除了press E 之外，再加上获得的Cherry数量高于一个值要怎么操作呢？
+
+12.攻击敌人优化
+
+老师，我想提一个自己的建议，现在角色跳到怪物的上部歪一点也可以击杀怪物，因为判定击杀怪物的方式仅仅是在下落的动画中就触发，我试着增加了一个要求角色Y轴高于怪物碰撞体的条件，我的做法是：  if (anim.GetBool(falling) && transform.position.y  (collision.gameObject.transform.position.y+1))     并且给角色动画控制器里fall的动画也增加可以切换到hurt的条件。 这样的话跳到怪物正上方才可以将其击杀，跳歪了还是会受伤弹走。
+
+
+
+
+
+4.8
