--- a/Unity notes/问题汇总.md
+++ b/Unity notes/问题汇总.md
@@ -53,7 +53,7 @@ GetButton需要在update()中调用
 
 12.攻击敌人优化
 
-老师，我想提一个自己的建议，现在角色跳到怪物的上部歪一点也可以击杀怪物，因为判定击杀怪物的方式仅仅是在下落的动画中就触发，我试着增加了一个要求角色Y轴高于怪物碰撞体的条件，我的做法是：  if (anim.GetBool(falling) && transform.position.y  (collision.gameObject.transform.position.y+1))     并且给角色动画控制器里fall的动画也增加可以切换到hurt的条件。 这样的话跳到怪物正上方才可以将其击杀，跳歪了还是会受伤弹走。
+老师，我想提一个自己的建议，现在角色跳到怪物的上部歪一点也可以击杀怪物，因为判定击杀怪物的方式仅仅是在下落的动画中就触发，我试着增加了一个要求角色Y轴高于怪物碰撞体的条件，我的做法是：  if (anim.GetBool(falling) && transform.position.y>collision.gameObject.transform.position.y)     并且给角色动画控制器里fall的动画也增加可以切换到hurt的条件。 这样的话跳到怪物正上方才可以将其击杀，跳歪了还是会受伤弹走。
 
 
 
