--- a/c++/变量存在的意义方便管理内存空间.md
+++ b/c++/变量存在的意义方便管理内存空间.md
@@ -73,4 +73,74 @@ float f1 = 3.14;//3.14被视为双精度,要多做一步转换
 
 float f1 = 3.14f;
 
- 
+ 输出小数显示六位有效数字
+
+
+
+
+
+字符型
+
+用于显示单个字符
+
+char ch = 'a';
+
+注：创建字符型变量用单引号，单引号内只能有一个字符
+
+字符型变量并不是把字符本身放到内存中存储，而是将对应的ASCII编码放入到存储单元
+
+cout<<(int)ch<<endl;
+
+输出：97——小写a对应的ASCII编码
+
+a~97,A~65
+
+ASCII表
+
+
+
+转义字符
+
+/n
+
+cout<<"hello world\n";
+
+cout<<"hello world"<<endl;
+
+\
+
+cout<<"\\"<<endl;
+
+第一个反斜杠告诉编译器要输出特殊符号
+
+\t：可以整齐输出数据
+
+cout<<"hello\tworld"<<endl;
+
+
+
+
+
+字符串型
+
+c   char 变量名[] = "字符串值";//注意加[]，不加则是创建字符
+
+c++  string 变量名 = "字符串值";
+
+
+
+
+
+布尔类型
+
+true-真（1） false-假（0）
+
+占1给字节大小
+
+
+
+
+
+数据的输入
+
+cin
