--- a/c++/变量存在的意义方便管理内存空间.md
+++ b/c++/变量存在的意义方便管理内存空间.md
@@ -1,4 +1,4 @@
-变量存在的意义:方便管理内存空间
+# 变量存在的意义:方便管理内存空间
 
 --使用数据要通过记录内存编号(地址)，那就得记录许多编号
 
@@ -37,7 +37,7 @@ int 123abc = 40;//error
 
 
 
-数据类型
+# 数据类型
 
 创建一个变量或常量时，指出相应的数据类型才能给变量分配内存
 
@@ -99,7 +99,7 @@ ASCII表
 
 
 
-转义字符
+# 转义字符
 
 /n
 
@@ -141,6 +141,53 @@ true-真（1） false-假（0）
 
 
 
-数据的输入
+# 数据的输入
 
 cin
+
+字符型
+
+```c++
+#include<iostream>
+using namespace std;
+
+char ch = 'a';
+cout<<"给ch赋值"<<endl;
+cin>>ch;
+cout<<"ch值="<<ch<<endl;
+```
+
+字符串型
+
+```c++
+#include<string>
+string str ="hellowo";
+cout<<"给str赋值"<<endl;
+cin>>str;
+cout<<"str值="<<str<<endl;
+```
+
+布尔类型
+
+```c++
+bool flag=false;
+cout<<"给falg赋值"<<endl;
+cin>>flag;
+cout<<flag<<endl;
+```
+
+输入非0的值输出都为1——非零都为真
+
+
+
+
+
+# 运算符
+
+## 算数运算符
+
++-*/%  ++  -- 
+
+整数相除仍为整数int/int==int，两数相除除数不为零，两个小数可以相除
+
+两个小数不能做取模运算
