--- a/Unity notes/15.光.md
+++ b/Unity notes/15.光.md
@@ -10,7 +10,7 @@ Window-Package Manager-Lightweight
 
 添加衍射光的效果，让材质可以放光
 
--法线贴图
+--法线贴图
 
 
 
@@ -31,3 +31,11 @@ Edit-Project Setting-quality-Anti Aliasing改成Disabled
 光是3D的光源-调整z的值调整光线的亮度
 
 也可为player添加点光源
+
+
+
+
+
+为啥我的任务向左转的时候 就看不见了 向右转又可以看到了？
+
+transform一定用 vector3
