--- a/c++/变量存在的意义方便管理内存空间.md
+++ b/c++/变量存在的意义方便管理内存空间.md
@@ -1,4 +1,4 @@
-# 变量存在的意义:方便管理内存空间
+# 1.变量存在的意义:方便管理内存空间
 
 --使用数据要通过记录内存编号(地址)，那就得记录许多编号
 
@@ -37,7 +37,7 @@ int 123abc = 40;//error
 
 
 
-# 数据类型
+# 2.数据类型
 
 创建一个变量或常量时，指出相应的数据类型才能给变量分配内存
 
@@ -99,7 +99,7 @@ ASCII表
 
 
 
-# 转义字符
+# 3.转义字符
 
 /n
 
@@ -141,7 +141,7 @@ true-真（1） false-假（0）
 
 
 
-# 数据的输入
+# 4.数据的输入
 
 cin
 
@@ -182,7 +182,7 @@ cout<<flag<<endl;
 
 
 
-# 运算符
+# 5.运算符
 
 ## 算数运算符
 
@@ -191,3 +191,394 @@ cout<<flag<<endl;
 整数相除仍为整数int/int==int，两数相除除数不为零，两个小数可以相除
 
 两个小数不能做取模运算
+
+## 赋值运算符
+
+=    +=   -=   *=   /=
+
+## 比较运算符
+
+==   ！= < > <= >=
+
+返回值0、1，0为假，1为真
+
+## 逻辑运算符
+
+非!      或||     与&& 
+
+
+
+
+
+# 6.程序流程结构
+
+顺序、选择、循环结构	
+
+if条件后不加分号，会导致前后代码分离，后面语句都会执行
+
+switch缺点:判断时候只能是整型或者字符型，不可以是一个区间
+
+# 7.数组
+
+# 8.函数
+
+# 9.指针
+
+# 10.结构体
+
+自定义数据类型，一些类型集合组成的一个类型
+
+语法： struct 类型名称  { 成员列表  }
+
+## 10.1定义和赋值		
+
+```c++
+#include<iostream>
+using namespace std;
+int main()
+{
+	//创建学生数据类型
+	struct student
+	{
+		//成员列表
+		
+		//姓名
+		string name;
+		//年龄
+		int age;
+		//分数
+		int score;
+	}s3;
+
+	//通过学生类型创建具体学生
+	//给s1属性赋值，通过.来访问结构体变量中的属性
+	//2.1  struct student s1
+	struct student s1;
+	s1.name = "张三";
+	s1.age = 18;
+	s1.score = 100;
+	cout << s1.name << s1.age << s1.score << endl;
+
+	//2.2  struct student s2 = {...}
+	struct student s2 = { "李四",19,80 };
+	cout << s2.name << s2.age << s2.score << endl;
+	
+	//2.3 在定义结构体时顺便创建结构体变量
+	
+	s3.name = "王五";
+	s3.age = 20;
+	s3.score = 70;
+	cout << s3.name << s3.age << s3.score << endl;
+	
+
+	system("pause");
+	return 0;
+}
+```
+
+总结:
+
+1.定义结构体时关键字struct不可省略
+
+2.创建结构体变量时struct可以省略
+
+3.结构体变量利用 . 访问成员
+
+## 10.2结构体数组
+
+将自定义的结构体放入数组中方便维护
+
+语法：struct 结构体名 数组名[元素个数] = { {},{},{},{}...   }
+
+```c++
+#include<iostream>
+using namespace std;
+int main()
+{
+	//1.定义结构体
+	struct  student
+	{
+		string name;
+		int age;
+		int score;
+	};
+	//2.创建结构体数组
+	struct student stuArray[3] =
+	{
+		{"张三",18,100},
+		{"李四",19,80},
+		{"王五",20,70}
+
+	};
+	
+	//3.给结构体数组中的元素赋值
+	stuArray[2].name = "赵六";
+	stuArray[2].age = 90;
+	stuArray[2].score = 60;
+	//4.遍历结构体数组
+	for (int i = 0; i < 3; i++)
+	{
+		cout << "姓名：" << stuArray[i].name 
+			<< "年龄：" << stuArray[i].age 
+			<< "分数：" << stuArray[i].score << endl;
+		
+	}
+    
+    system("pause");
+	return 0;
+}
+```
+
+## 10.3结构体指针
+
+通过指针访问结构体中的成员
+
+利用操作符->可以通过结构体指针访问结构体属性
+
+```c++
+struct student
+{
+	string name;
+	int age;
+	int score;
+};
+
+#include<iostream>
+using namespace std;
+int main()
+{
+	//1.创建学生结构体变量
+	struct student s = { "张三",18,100 };
+	
+
+	//2.通过指针指向结构体变量
+	struct student* p = &s;
+
+
+	//3.通过指针访问结构体变量中的数据
+	//通过结构体指针访问结构体中的属性，需要利用'->'
+	cout << "姓名：" << p->name << " 年龄：" << p->age << " 分数：" << p->score << endl;
+
+	system("pause");
+	return 0;
+
+}
+```
+
+## 10.4结构体嵌套结构体
+
+结构体中的成员可以是另一个结构体
+
+如:每个老师辅导一个学员，一个老师的结构体中，记录一个学生的结构体
+
+```c++
+#include<iostream>
+using namespace std;
+
+//定义学生结构体
+struct student
+{
+	string name;
+	int age;
+	int score;
+};
+//定义老师结构体
+struct teacher
+{
+	int id;
+	string name;
+	int age;
+	struct student stu;//辅导的学生
+};
+
+int main()
+{
+	//结构体嵌套结构体
+	//创建老师
+	teacher t;
+	t.id = 10000;
+	t.name = "老王";
+	t.age = 50;
+	t.stu.name = "小王";
+	t.stu.age = 20;
+	t.stu.score = 60;
+
+
+	system("pause");
+	return 0;
+
+}
+```
+
+总结：在结构体中可以定义另一个结构体作为成员，用来解决实际问题
+
+## 10.5结构体作函数参数
+
+将结构体作为参数向函数中传递
+
+传递方式：值传递（形参改变不改变实参），地址传递（形参改变改变实参）
+
+```c++
+struct student
+{
+	string name;
+	int age;
+	int score;
+};
+//打印学生信息的函数
+
+//1.值传递
+void printstudent1(struct student s)
+{
+    cout<<"子函数中 姓名"<<s.name<<"年龄"<<s.age<<"分数"<<s.score<<endl;
+}
+
+//2.地址传递
+void printstudent2(struct student * p)
+{
+    
+    cout<<"子函数2中 姓名："<<p->name<<"年龄:"<<p->age<<"分数"<<p->score<<endl;
+}
+
+
+int main()
+{
+	//将结构体作为函数参数
+	//将学生传入到一个参数中，打印学生身上的所有信息
+
+
+	//创建结构体变量
+	struct student s;
+	s.name = "张三";
+	s.age = 20;
+	s.score = 75;
+    printstudent1(s);
+    printstudent2(&s);
+	//cout << "main函数中打印姓名：" << s.name << "年龄：" << s.age << "分数：" << s.score << endl;
+    system("pause");
+	return 0;
+
+}
+```
+
+
+
+值传递
+
+```c++
+struct student
+{
+	string name;
+	int age;
+	int score;
+};
+
+
+//1.值传递
+void printstudent1(struct student s)
+{
+    s.age = 100;
+    cout<<"子函数中 姓名"<<s.name<<"年龄"<<s.age<<"分数"<<s.score<<endl;
+}
+
+
+int main()
+{
+	//将结构体作为函数参数
+	//将学生传入到一个参数中，打印学生身上的所有信息
+
+
+	//创建结构体变量
+	struct student s;
+	s.name = "张三";
+	s.age = 20;
+	s.score = 75;
+    printstudent1(s);
+	cout << "main函数中打印姓名：" << s.name << "年龄：" << s.age << "分数：" << s.score << endl;
+    system("pause");
+	return 0;
+
+}
+```
+
+输出：
+
+子函数中 姓名： 张三 100 75
+
+main函数中打印姓名： 张三 20 75
+
+```c++
+//2.地址传递
+void printstudent2(struct student * p)
+{
+    p->age=200;
+    cout<<"子函数2中 姓名："<<p->name<<"年龄:"<<p->age<<"分数"<<p->score<<endl;
+}
+
+
+int main()
+{
+	//将结构体作为函数参数
+	//将学生传入到一个参数中，打印学生身上的所有信息
+
+
+	//创建结构体变量
+	struct student s;
+	s.name = "张三";
+	s.age = 20;
+	s.score = 75;
+    
+    printstudent2(&s);
+	cout << "main函数中打印姓名：" << s.name << "年龄：" << s.age << "分数：" << s.score << endl;
+    system("pause");
+	return 0;
+
+}
+```
+
+输出： 
+
+张三 200 75
+
+张三 200 75
+
+总结：如果不想修改主函数中的数据，用值传递，反之用地址传递
+
+## 10.6结构体中const使用场景
+
+用const来防止误操作
+
+//**将函数中的形参改为指针，可以减少内存空间，而且不会复制新的一个副本出来**
+
+```c++
+struct student
+{
+	string name;
+	int age;
+	int score;
+};
+
+
+//2.地址传递
+void printstudent2(const student * p)
+{
+    //p->age=200;//error加入const后，一旦有修改操作就会报错
+    cout<<"子函数2中 姓名："<<p->name<<"年龄:"<<p->age<<"分数"<<p->score<<endl;
+}
+
+
+int main()
+{
+	struct student s;
+	s.name = "张三";
+	s.age = 20;
+	s.score = 75;
+    
+    printstudent2(&s);
+	
+    system("pause");
+	return 0;
+
+}
+```
+
