--- a/c++/变量存在的意义方便管理内存空间.md
+++ b/c++/变量存在的意义方便管理内存空间.md
@@ -582,3 +582,158 @@ int main()
 }
 ```
 
+## 10.7案例
+
+## 1
+
+学生做毕设，每名老师带5名学生，总共3名老师，需求如下
+
+设计学生和老师的结构体，其中在老师的结构体中，有老师姓名和一个存放5名学生的数组作为成员，学生的成员有姓名、考试分数，创建数组存放3名老师，通过函数给每个老师所带的学生赋值，并打印出老师数据以及老师所带学生数据
+
+```c++
+#include<iostream>
+using namespace std;
+#include<ctime>;
+
+struct student
+{
+	string sName;
+	int score;
+};
+
+struct teacher
+{
+	string tName;
+	struct student sArray[5];
+};
+
+//赋值函数
+void allocateSpace(struct teacher tArray[],int len)
+{
+	string nameSeed = "ABCDE";
+
+	//给老师赋值
+	for (int i = 0; i < len; i++)
+	{
+		tArray[i].tName = "teacher_";
+		tArray[i].tName += nameSeed[i];//追加字符串
+        
+		//通过循环给每名老师带的学生赋值
+		for (int j = 0; j < 5; j++)
+		{
+			tArray[i].sArray[j].sName = "student_";
+			tArray[i].sArray[j].sName += nameSeed[j];
+            
+			int random = rand() % 61+40;//0+40——60+40
+			tArray[i].sArray[j].score = random;
+		}
+		
+	}
+}
+
+//打印所有信息
+void printInfo(struct teacher tArray[],int len)
+{
+	for (int i = 0; i < len; i++)
+	{
+		cout << "老师名字：" << tArray[i].tName << endl;
+		for (int j = 0; j < 5; j++)
+		{
+			cout << "  学生姓名：" << tArray[i].sArray[j].sName
+				 << "  学生分数：" << tArray[i].sArray[j].score << endl;
+
+		}
+	}
+
+}
+
+
+
+int main()
+{
+	//随机数种子
+	srand((unsigned int)time(NULL));
+
+
+	//1.创建3名老师的数组
+	struct teacher tArray[3];
+
+	//2.通过函数给3名老师的信息赋值，并给老师带的学生信息赋值
+	
+	int len = sizeof(tArray) / sizeof(tArray[0]);
+	allocateSpace(tArray,len);
+	
+	//3.打印所有老师及所带的学生信息
+	printInfo(tArray, len);
+    
+    system("pause");
+	return 0;
+
+}
+```
+
+## 2
+
+设计一个英雄结构体，包括成员姓名，年龄，性别，创建结构体数组存放，并通过冒泡排序将数组中的英雄按年龄进行升序排序，
+
+```c++
+#include<iostream>
+using namespace std;
+
+
+struct hero
+{
+	string name;
+	int age;
+	string gender;
+};
+
+void bubbleSort(struct hero h[],int len)
+{
+	for (int i = 0; i < len-1; i++)
+	{
+		for (int j = 0; j < len-i-1; j++)
+		{
+			//如果j下标元素年龄大于j+1年龄就交换元素
+			if (h[j].age > h[j + 1].age)
+			{
+				struct hero temp = h[j];
+				h[j] = h[j + 1];
+				h[j + 1] = temp;
+
+			}
+		}
+	}
+}
+
+void printHero(struct hero h[], int len)
+{
+	for (int i = 0; i < len; i++)
+	{
+		cout << h[i].name << h[i].age << h[i].gender<<endl;
+	}
+}
+
+
+
+int main()
+{
+	//创建数组
+	struct hero hArray[5] = 
+	{
+		{"刘备",23,"男"},
+		{"关羽",22,"男"},
+		{"张飞",20,"男"},
+		{"赵云",21,"男"},
+		{"貂蝉",18,"女"}
+	};
+
+	//排序
+	int len = sizeof(hArray) / sizeof(hArray[0]);
+	bubbleSort(hArray,len);
+	
+	//打印
+	printHero(hArray, len);
+}
+```
+
