--- a/c++/核心.md
+++ b/c++/核心.md
@@ -649,20 +649,22 @@ int main()
 
 ## 4.1封装
 
-封装意义：
+### 4.1.1封装意义：
 
 - 将属性和行为作为一个整体，表现生活中的事物
 - 将属性和行为加以权限控制
 
 语法：class 类名{访问权限：属性  /行为  }
 
+意义之一：
+
+在设计类的时候，属性和行为写在一起表现事物
+
 类中的属性和行为称为成员
 
-属性    成员属性 成员变量
+属性 ：  成员属性 成员变量
 
-行为    成员函数 成员方法
-
-
+行为 ：  成员函数 成员方法
 
 设计圆类，求圆的周长
 
@@ -701,5 +703,357 @@ int main()
     system("pause");
     return 0;
 }
+```
+
+意义二：
+
+类在设计时可以把属性和行为放在不同的权限下，加以控制
+
+访问权限有三种：
+
+1. public 公共权限           成员  类内、外都可以访问
+2. protected 保护权限     成员  类内可以访问，类外不能访问  子类可以访问父类中的保护内容
+3. private 私有权限         成员  类内可以访问，类外不能访问   子类不可以访问父类中的私有内容
+
+```c++
+#include<iostream>
+using namespace std;
+class Person
+{
+public:
+	//公共权限
+	string m_Name;
+
+protected:
+	//保护权限
+	string m_Car;
+
+private:
+	//私有权限
+	int m_Password;
+
+private:
+	void func()
+	{
+		//类内访问
+		m_Name = "张三";
+		m_Car = "拖拉机";
+		m_Password = 123;
+	}
+};
+
+int main()
+{
+	//实例化具体对象
+	Person p1;
+	//类外访问
+	p1.m_Name = "李四";
+	p1.m_Car = "奔驰";//error 保护权限内容在类外无法访问
+	p1.m_Password = 123456;//error 私有权限内容在类外无法访问
+	p1.func();//error 私有权限内容在类外无法访问
+
+	system("pause");
+	return 0;
+}
+```
+
+### 4.1.2struct和class区别
+
+默认访问权限不同
+
+- struct 默认权限为公共
+- class 默认权限为私有
+
+```c++
+class C1
+{
+	int m_A;//默认为private
+
+};
+struct C2
+{
+	int m_A;//默认为public
+};
+int main()
+{
+	C1 c1;
+	c1.m_A = 1;//error
+	
+    C2 c2;
+	c2.m_A = 2;
+}
+```
+
+### 4.1.3成员属性设置为私有
+
+成员属性设置为私有‘
+
+1.可自己控制读写权限
+
+2.对于写可以检测数据的有效性(在设置数据的成员函数中加判断)
+
+```c++
+#include<iostream>
+using namespace std;
+
+class Person
+{
+public:
+	//设置姓名
+	void setName(string name)
+	{
+		m_Name = name;
+	}
+	//获取姓名
+	string getName()
+	{
+		return m_Name;
+	}
+	//获取年龄
+	int getAge()
+	{
+		m_Age = 10;
+		return m_Age;
+
+	}
+	void setLover(string lover)
+	{
+		m_Lover = lover;
+	}
+private:
+	//可读可写
+	string m_Name;
+
+	//只读
+	int m_Age;
+
+	//只写
+	string m_Lover;
+
+};
+
+int main()
+{
+	Person p;
+	p.setName("张三");
+
+	cout << "姓名为：" << p.getName() << endl;
+
+	cout << "年龄为：" << p.getAge() << endl;
+
+	p.setLover("cls");
+	
+
+	system("pause");
+	return 0;
+}
+```
+
+### 案例1：立方体类
+
+设计立方体类
+
+求出立方体面积和体积
+
+分别用全局函数和成员函数判断两个立方体是否相等
+
+class Cube{
+
+private属性：长、宽、高，
+
+public行为：设置获取长宽高、获取面积，体积};
+
+1.创建立方体类
+
+2.设计属性
+
+3.设计行为
+
+4.分别利用全局函数和成员函数 判断两个立方体是否相等
+
+~~~c++
+//全局函数判断是否相等
+bool isSame(Cube &c1,Cube &c2)
+{
+    //长宽高相等
+    if(c1.getL() == c2.getL() && c1.getW() == c2.getW() && c1.getH() == c2.getH())
+    {
+        return true
+    }
+    return false;
+}
+class Cube
+{
+public:
+    ```
+    ```
+    ```
+    bool isSameByClass(Cube &c)//引用，不用复制一份数据，减少内存浪费
+    {
+        //自身的长宽高和传进的长宽高对比
+        if(m_L == c.getL() && m_W == c.getW() && m_H == c.getH())
+        {
+            return ture;
+        }
+        else
+        {
+            return false;
+        }
+   
+    }
+    
+private:
+    ```
+    ```    
+    ```
+};
+int main()
+{
+    
+    ```
+    ```
+    ```
+    ```
+    //利用全局函数判断
+    if(isSame)
+    {
+        cout<<"相等"<<endl;
+    }
+    else
+    {
+        cout<<"不等"<<endl;
+    }
+    
+    //利用成员函数判断
+    if(c1.isSameByClass(c2))
+    {
+        cout<<"相等"<<endl;
+    }
+    else
+    {
+        cout<<"不等"<<endl;
+    }
+}
+~~~
+
+### 案例2：点和圆的关系
+
+设计一个圆形类，和一个点类，计算点和圆的关系
+
+**在类中可以让另一个类作为本类中的成员**
+
+Circle类中成员有Point类
+
+————
+
+#### 类的分文件编写
+
+大型开发通常会把类拆开分别放在源文件-定义 和 头文件-实现
+
+创建头文件point.h，源文件point.cpp
+
+头文件point.h中
+
+```c++
+#pragma once//防止头文件重复包含
+#include<iostream>
+using namespace std;
+class Point
+{
+public:
+    //设置x
+    void setX(int x);
+    //获取x
+    int getX();
+    //设置y
+    void setY(int y);
+    //获取y
+    int getY();
+private:
+    int m_X;
+    int m_Y;
+};
+```
+
+源文件point.cpp中
+
+```C++
+#include"point.h"
+void Point::setX(int x)//setX()是Point作用域下的成员函数
+{
+    m_X = x;
+}
+int Point::getX()
+{
+    return m_X;
+}
+void Point::setY(int y)
+{
+    m_Y = y;
+}
+int Point::getY()
+{
+    return m_y;
+}
+
+```
+
+类似的把Circle类拆成两个文件
+
+源文件circle.h中
+
+```c++
+#pragma once//防止头文件重复包含
+#include<iostream>
+
+#include"point.h"
+
+using namespace std;
+class Circle
+{
+public:
+    //设置半径
+    void setR(int r);
+    //获取半径
+    int getR();
+    //设置圆心
+    void setCenter(Point center);//Point报错,要保护Point.h
+    //获取圆心
+    Point getCenter();
+private:
+    int m_R;
+    int m_Center;
+};
+```
+
+头文件circle.cpp中
+
+```c++
+#include"circle.h"
+
+void Circle::setR(int r)
+{
+    m_R = r;
+}
+int Circle::getR()
+{
+    return m_R;
+}
+
+void Circle::setCenter(Point center)
+{
+    m_Center = center;
+}
+void Circle::getCenter()
+{
+    return m_Center;
+}
+```
+
+最后在源文件中包含点类圆类的头文件
+
+```c++
+#include"point.h"
+#include"circle.h"
 ```
 
