--- a/c++/核心.md
+++ b/c++/核心.md
@@ -647,9 +647,9 @@ int main()
 
 三大特性：封装、继承、多态
 
-## 4.1封装
+## 4.1 封装
 
-### 4.1.1封装意义：
+### 4.1.1 封装意义：
 
 - 将属性和行为作为一个整体，表现生活中的事物
 - 将属性和行为加以权限控制
@@ -757,7 +757,7 @@ int main()
 }
 ```
 
-### 4.1.2struct和class区别
+### 4.1.2 struct和class区别
 
 默认访问权限不同
 
@@ -784,7 +784,7 @@ int main()
 }
 ```
 
-### 4.1.3成员属性设置为私有
+### 4.1.3 成员属性设置为私有
 
 成员属性设置为私有‘
 
@@ -1056,4 +1056,155 @@ void Circle::getCenter()
 #include"point.h"
 #include"circle.h"
 ```
+
+## 4.2 对象的初始化和清理
+
+### 4.2.1 构造函数和析构函数
+
+~~一通操作不小心删除~~
+
+### 4.2.2 构造函数的分类及调用 
+
+按参数分 有参构造(默认构造函数) 和无参构造
+
+按类型分 普通构造和拷贝构造
+
+拷贝函数
+
+```c++
+Person(const Person &p)
+{
+    
+}
+```
+
+
+
+```c++
+//分类
+class Person
+{
+public:
+    //构造函数
+    Person()
+    {
+        cout << "Person的无参构造函数调用" << endl;
+    }
+    Person(int a)
+    {
+        age = a;
+        cout << "Person的有参构造函数调用" << endl;
+    }
+    //拷贝构造函数
+    Person(const Person &p)
+    {
+        //将传入的人身上的所有属性，拷到我身上
+        age = p.age;
+        cout << "Person的拷贝构造函数调用" << endl;
+    }
+    
+    ~Person()
+    {
+        cout << "Person的析构函数调用" << endl;
+    }
+    
+    int age;
+};
+
+
+//调用
+void test01()
+{
+    //1.括号法
+    Person p1;//默认构造函数调用
+    Person p2(10);//有参构造函数调用
+    Person p3(p2);//拷贝构造函数调用
+    
+    //cout << "p2的年龄：" << p2.age << endl;//输出10
+    //cout << "p3的年龄：" << p2.age << endl;//输出10
+    
+    /*注意事项1
+    调用默认构造函数的时候，不加()
+    Person p1();//创建不出对象，因为会被编译器认为是函数的声明，不会认为的创建对象
+    */
+    
+    //2.显示法
+    Person p1;//默认构造函数调用
+    Person p2 = Person(10);//有参构造函数调用
+    Person p3 = Person(p2);//拷贝构造函数调用
+    
+    Person(10);//匿名对象 特点：当前行执行结束后，系统会立即回收匿名对象
+    cout << "aaa" << endl;
+    
+    //注意事项2
+    //不要利用拷贝构造函数初始化匿名对象
+    Person(p3);//重定义error  编译器会认为 Person(p3) === Person p3;
+    
+    //3.隐式转换法
+    Person p4 = 10;//相当于写了Person p4 = Person(10);
+    Person p5 = p4;//拷贝构造 Person p5 = Person(p4);
+}
+
+
+
+int main()
+{
+    test01();
+    
+    system("pause");
+    
+    return 0;
+}
+```
+
+
+
+
+
+#### 匿名对象
+
+```c++
+void test()
+{
+    Person(10);//匿名对象 特点：当前行执行结束后，系统会立即回收匿名对象
+    cout << "aaa" << endl;
+}
+
+
+//test调用后输出
+    Person的有参函数调用
+    Person的析构函数调用//当前行执行结束后，系统会立即回收匿名对象
+    aaa
+```
+
+
+
+#### 注意事项
+
+注意事项1
+
+```c++
+//注意事项
+//调用默认构造函数的时候，不加()
+
+Person p1();//创建不出对象，因为会被编译器认为是函数的声明，不会认为的创建对象
+```
+
+注意事项2
+
+```c++
+//注意事项2
+//不要利用拷贝构造函数初始化匿名对象
+
+Person(p3);//重定义error  
+//编译器会认为是对象声明 Person(p3) === Person p3;
+```
+
+
+
+### 4.2.3 拷贝构造函数调用时机
+
+- 
+- 
+- 
 
