--- a/c++/核心.md
+++ b/c++/核心.md
@@ -885,9 +885,9 @@ bool isSame(Cube &c1,Cube &c2)
 class Cube
 {
 public:
-    ```
-    ```
-    ```
+    ...
+    ...
+    ...
     bool isSameByClass(Cube &c)//引用，不用复制一份数据，减少内存浪费
     {
         //自身的长宽高和传进的长宽高对比
@@ -903,17 +903,17 @@ public:
     }
     
 private:
-    ```
-    ```    
-    ```
+    ...
+    ...    
+    ...
 };
 int main()
 {
     
-    ```
-    ```
-    ```
-    ```
+    ...
+    ...
+    ...
+    ...
     //利用全局函数判断
     if(isSame)
     {
@@ -1059,7 +1059,7 @@ void Circle::getCenter()
 
 ## 4.2 对象的初始化和清理
 
-### 4.2.1 构造函数和析构函数
+### 4.2.1 构造函数和析构函数()
 
 ~~一通操作不小心删除~~
 
@@ -1202,9 +1202,450 @@ Person(p3);//重定义error
 
 
 
-### 4.2.3 拷贝构造函数调用时机
+### 4.2.3 拷贝构造函数调用时机()
 
 - 
 - 
 - 
+
+### 4.2.4 构造函数调用规则()
+
+### 4.2.5 深拷贝与浅拷贝()
+
+### 4.2.6 初始化列表
+
+用于初始化属性
+
+```c++
+#include<iostream>
+using namespace std;
+
+class Person
+{
+public:
+	Person(int a,int b,int c) :m_A(a), m_B(b), m_C(c)
+	{
+
+	}
+
+	int m_A;
+	int m_B;
+	int m_C;
+};
+void test()
+{
+	Person p(1,22,33);
+	cout << p.m_A << endl;
+	cout << p.m_B << endl;
+	cout << p.m_C << endl;
+}
+int main()
+{
+	test();
+}
+```
+
+### 4.2.7 类对象作为类成员
+
+当其他类对象作为本类成员，先构造类对象，再构造自身 
+
+析构顺序相反
+
+```c++
+class Phone
+{  
+public:
+    Phone(string pName)
+    {
+        m_PName = pName;
+    }
+    
+    string m_PName;
+};
+class Person
+{
+    //Phone m_Phone = pName 隐式转换法
+    Person(string name.string pName):m_Name(name),m_Phone(pName)
+    {
+        
+    }
+    
+public:
+    string m_Name;
+    
+    Phone m_Phone;
+    
+};
+void test01()
+{
+    Person p("张三","苹果");
+}
+
+int main()
+{
+    test01();
+}
+```
+
+### 4.2.8 静态成员和静态函数()
+
+
+
+
+
+## 4.3 对象模型和this指针()
+
+
+
+
+
+### 4.3.1  成员变量和成员函数分开存储()
+
+### 4.3.2 this指针概念()
+
+### 4.3.3 空指针访问成员函数()
+
+### 4.3.4 const修饰成员函数
+
+常函数：
+
+- 定义一个类Person
+
+- 常函数内不可修改成员属性，在成员函数后面加const，修饰的是this指针，让指针指向的值也不可修改
+
+- 加mutable关键字使常函数中也可以修改这个值
+
+```c++
+
+
+//this指针的本质是指针常量，指针的指向不可修改(指向被调用的成员函数所属的对象)
+//const Person * const this
+void showPerson() const
+{   
+    //m_A = 100;//error
+    //this->m_A = 100//error  指针的指向的值不可修改
+    //this = NULL//error 指针的指向不可修改
+    
+}
+int m_A;
+mutable int m_B;//特殊变量，常函数中也可以修改这个值
+```
+
+常对象：
+
+- 在对象前加const,变为常对象，常对象的属性不可修改
+
+- 加了mutable关键字的变量在常对象下也可修改
+
+- 常对象只能调用常函数
+
+~~~c++
+class Person
+{
+    
+    ...
+    ...   
+    void func()
+    {
+        m_A = 100;
+    }
+    ... 
+};
+
+void test02()
+{
+    const Person p;//在对象前加const,变为常对象
+    p.m_A = 100;//error 对象的属性不可修改
+    p.m_B = 100;//加了mutable的变量在常对象下也可修改
+    
+    //常对象只能调用常函数
+    p.showPerson();//常对象可调用常函数 因为常函数不可以修改属性
+    p.func();//error 常对象不可调用普通成员函数，因为普通成员函数可以修改属性
+}
+~~~
+
+## 4.4 友元()
+
+关键字 friend
+
+- 全局函数做友元
+- 类做友元
+- 成员函数做友元
+
+## 4.5 运算符重载
+
+### 4.5.1 加号运算符重载()
+
+operator+
+
+概念：对已有的运算符重新进行定义，赋予其另一种功能，以适应不同的数据类型
+
+[](https://www.bilibili.com/video/BV1et411b73Z?p=121&t=633.2)
+
+1.对于内置的数据类型的表达式的运算符(如int 之间运算)是不能改变的
+
+2.不要滥用运算符重载
+
+### 4.5.2 左移运算符重载
+
+operator <<
+
+```c++
+class Person
+{
+public:
+    int m_A;
+    int m_B;
+    
+};
+
+void test01()
+{
+    Person p;
+    p.m_A = 10;
+    p.m_B = 10;
+    
+    cout << p;//error 输出了未定义数据类型
+}
+int main()
+{
+    test01();
+}
+```
+
+无法直接输出对象
+
+
+
+作用：输出自定义的数据类型，通过直接输出对象来打印属性
+
+[]()
+
+不能利用成员函数重载<<运算符，因为无法实现cout在左侧——利用成员函数重载左移运算符， p.operator<<(cout)  简化版本 p<<cout，因此只能利用全局函数重载左移运算符
+
+cout 属于ostream输出流对象，且全局只能有一个 因此函数定义应这样：`void operator<<(ostream &cout ,Person p)`
+
+```c++
+class Person
+{
+public:
+    Person(int a,int b)
+    {
+        m_A = a;
+        m_B = b;
+    }
+public:
+    int m_A;
+    int m_B;
+    
+};
+
+void operator<<(ostream &cout ,Person p)//本质 operator<<(cout , p)	简化 cout << p
+{
+    cout << "m_A=" << p.m_A << "  m_B=" << p.m_B;
+}
+void test01()
+{
+    Person p(10,10);
+    
+    cout << p;//不报错
+    cout << p << endl;//error
+}
+int main()
+{
+    test01();
+}
+```
+
+`cout << p << endl;//error`函数调用后返回值为空，因此cout << p后不能再追加新的内容，如果函数调用后返回了cout 才能追加去输出别的内容
+
+```c++
+ostream & operator<<(ostream &cout ,Person p)//本质 operator<<(cout , p)	简化 cout << p
+{
+    cout << "m_A=" << p.m_A << "  m_B=" << p.m_B;
+    return cout;
+}
+void test01()
+{
+    Person p(10,10);
+    
+    cout << p;//不报错
+    cout << p << endl;//不报错
+    cout << p << "helloworld" << endl;
+}
+```
+
+如果把函数定义中的 cout 改为 out 也没有问题——引用本身就是起别名，把out作为cout的别名
+
+一般会把成员属性权限设为private
+
+`cout << "m_A=" << p.m_A << "  m_B=" << p.m_B;`报错
+
+那么怎么才能在外部访问呢？可以利用友元，在类内加上`friend ostream & operator<<(ostream &cout ,Person p);`即可
+
+```c++
+class Person
+{
+    friend ostream & operator<<(ostream &cout ,Person p);
+
+public:
+    int m_A;
+    int m_B;
+    
+};
+```
+
+总结：重载左移运算符配合友元可以实现输出自定义数据类型
+
+### 4.5.3 递增运算符重载
+
+```c++
+class MyInteger
+{
+public:
+    MyInteger()
+    {
+        m_Num = 0;
+    }
+private:
+    int m_Num;
+}
+void test01()
+{
+    MyInteger myint;
+    cout << myint << endl;//error输出了自定义的对象	
+}
+int main()
+{
+    test01();
+}
+```
+
+要先重载左移运算符
+
+```c++
+ostream & operator<<(ostream &cout ,MyInteger myint)
+{
+    cout << myint.m_Num;
+    return cout;
+}
+```
+
+由于成员属性private因此要配合友元，在类内加`friend ostream & operator<<(ostream &cout ,MyInteger myint);`
+
+此时可以输出自定义的整型数据了，但无法进行++
+
+重载++运算符
+
+分为前置++运算符，后置++运算符
+
+```c++
+	void operator++()
+    {
+        m_Num++;
+    }
+```
+
+
+
+```c++
+class MyInteger
+{
+    friend ostream & operator<<(ostream &cout ,MyInteger myint)
+public:
+    MyInteger()
+    {
+        m_Num = 0;
+    }
+    void operator++()
+    {
+        m_Num++;
+    }
+    
+private:
+    int m_Num;
+}
+```
+
+但是加上后`cout << myint << endl;`仍然报错，因为++函数返回为空void，无法输出
+
+在重载函数中改动`MyInteger& operator++()`并加上`return *this;`返回自身
+
+```c++
+	MyInteger& operator++()
+    {
+        //先进性++运算
+        m_Num++;
+        //再将自身做返回
+        return *this;
+    }
+```
+
+MyInteger& 写成MyInteger也不报错，最后输出也正确， 
+
+返回引用是为了一直对一个数据进行递增
+
+如果返回 值 
+
+```c++
+void test0101()
+{
+    MyInteger myint;
+    cout << ++（++myint） << endl;
+    cout << myint << endl;
+}
+int main()
+{
+    test0101();
+}
+输出：
+    2
+    1
+
+```
+
+重载后置++运算符
+
+```c++
+class MyInteger
+{    
+	//后置递增返回值
+	MyInteger operator++(int)//int占位参数区分前置和后置递增
+    {
+        //先 记录当时结果
+        MyInteger temp = *this;
+        //后 递增
+        m_Num++;
+        //最后将记录结果做返回
+        return temp;
+    }
+private:
+    int m_Num;
+}       
+```
+
+后置递增返回 值 ，如果返回引用，最后返回的是局部对象的引用，然而局部对象在`MyInteger temp = *this;`
+
+后被释放，最后再返回就是非法操作了
+
+```c++
+void test02()
+{
+    MyInteger myint;
+    cout << myint++ << endl;
+    cout << myint << endl;
+}
+int main()
+{
+    test02();
+}
+
+输出：
+    0
+    1
+```
+
+总结：前置递增返回引用，后置递增返回值
+
+### 4.5.4 赋值运算符重载
 
