--- a/c++/通讯录.md
+++ b/c++/通讯录.md
@@ -1,6 +1,27 @@
+
+
+通讯录管理系统中实现六个功能
+
+1、添加联系人 
+2、显示联系人
+3、删除联系人
+4、查找联系人
+5、修改联系人
+6、清空联系人
+0、退出通讯录 
+
+实现通讯录的关键是利用地址传递来修饰实参
+
+- 最初要先做好定义结构体的准备工作，联系人结构体来存放姓名，性别等等属性，通讯录结构体存放联系人数组和记录联系人个数
+- 接着完成大体框架：功能分支，菜单及退出
+- 根据需求，分别封装函数
+- 在main的switch分支中分别调用
+
+[TOC]
+
+
+
 ## 菜单
-
-
 
 封装函数显示界面
 
@@ -31,7 +52,7 @@ int main()
 
 
 
-## 退出
+## 0.退出
 
 使用switch分支结构，while循环
 
@@ -40,7 +61,7 @@ int main()
 ```c++
 int main()
 {
-	int select = 0;//用户选择输入的变量
+	int select = 0;//初始化用户选择输入的变量
 	while (true)
 	{
 		//菜单调用
@@ -78,7 +99,7 @@ int main()
 }
 ```
 
-## 添加联系人
+## 1.添加联系人
 
 实现添加联系人，人数上限为1000人，联系人信息包括（姓名、性别、年龄、地址、电话）
 
@@ -105,6 +126,8 @@ int main()
 2. 设计通讯录结构体存放联系人，并记录联系人个数，每添加一次++(个数上限1000)
 
    ```c++
+   #define MAX 1000
+   
    struct Addressbooks
    {
    	//通讯录中保存的联系人的数组
@@ -135,6 +158,8 @@ int main()
 
 4. 封装添加联系人的函数，在main中调用
 
+   添加联系人后需要增加人数`abs->m_Size++;`
+   
    ```c++
    void addPerson(Addressbooks* abs)
    {
@@ -199,21 +224,22 @@ int main()
    	}
    }
    ```
-
    
-
-在main中调用
 
 ```c++
 case 1://1、添加联系人
-			addPerson(&abs);//地址传递，可以修饰实参
+	addPerson(&abs);//地址传递，可以修饰实参
 ```
 
-## 显示联系人
+## 2.显示联系人
 
 封装显示联系人函数
 
 先判断有无联系人，无就显示空，有联系人显示所有联系人
+
+在输出性别时用了三目运算符，为了输出男/女，而不是数字
+
+`cout << "性别： " << (abs->personArray[ret].m_Sex == 1 ? "男" : "女") << "\t";`
 
 ```c++
 void showPerson(Addressbooks* abs)//传入通讯录
@@ -243,46 +269,584 @@ void showPerson(Addressbooks* abs)//传入通讯录
 }
 ```
 
+再在main中调用
+
 ```c++
 case 2://2、显示联系人
-			showPerson(&abs);
+	showPerson(&abs);
 ```
 
 
 
-## 删除联系人
+## 3.删除联系人
 
 按名称删除指定联系人
 
-1. 封装检测联系人是否存在——方便之后按姓名查找修改
+**封装检测联系人是否存在——方便之后按姓名查找修改**
 
-   ```
-   
-   ```
+通过比较联系人姓名和传入的姓名来检测该联系人是否存在
 
-   
+```c++
+int isExist(Addressbooks* abs,string name)
+{
+	for (int i = 0; i < abs->m_Size; i++)
+	{
+		if (abs->personArray[i].m_Name == name)
+		{
+			return i;//找到，返回这个人在数组中的下标
+		}	
+	}
+	return -1;//没找到返回-1
+}
+```
 
-2. 封装删除联系人函数
 
-## 查找联系人
 
-查找显示联系人信息
+封装删除联系人函数
+
+通过把数组中的数据前移，并更新联系人个数，覆盖要删除的联系人数据来实现删除联系人
+
+删除联系人函数：
+
+```c++
+void deletePerson(Addressbooks * abs)
+{
+	cout << "请输入您要删除的联系人" << endl;
+	string name;
+	cin >> name;
+	int ret = isExist(abs, name);//ret == -1未查到  ret != -1查到
+	if (ret!=-1)
+	{
+		//查找到人，删除
+		for (int i = ret; i < abs->m_Size; i++)
+		{
+			//数据前移
+			abs->personArray[i] = abs->personArray[i + 1];
+		}
+		abs->m_Size--;//更新联系人数目
+		cout << "删除成功" << endl;
+	}
+	else
+	{
+		cout << "查无此人" << endl;
+	}
+
+	system("pause");
+	system("cls");
+}
+```
+
+再在main中调用
+
+```c++
+case 3://3、删除联系人
+	deletePerson(&abs);
+```
+
+
+
+## 4.查找联系人
+
+实现查找显示联系人信息
 
 封装查找联系人函数
 
+利用删除联系人中的 isExist函数 来判断联系人是否存在，存在即输出联系人的信息
+
+```c++
+void findPerson(Addressbooks*abs)
+{
+	cout << "请输入您要查找的联系人" << endl;
+	string name;
+	cin >> name;
+//判断指定的联系人是否存在
+	int ret = isExist(abs, name);
+	if (ret != -1)
+	{
+		cout << "姓名： " << abs->personArray[ret].m_Name << "\t";
+		cout << "性别： " << (abs->personArray[ret].m_Sex == 1 ? "男" : "女") << "\t";
+		cout << "年龄： " << abs->personArray[ret].m_Age << "\t";
+		cout << "电话： " << abs->personArray[ret].m_Phone << "\t";
+		cout << "住址： " << abs->personArray[ret].m_Addr << "\t" << endl;
+
+	}
+}
 ```
 
+在输出性别时同样用了三目运算符，为了输出男/女，而不是数字
+
+`cout << "性别： " << (abs->personArray[ret].m_Sex == 1 ? "男" : "女") << "\t";`
+
+显示后按任意键清屏
+
+```c++
+system("pause");
+system("cls");
 ```
 
-## 修改联系人
+再在main中调用
+
+```c#
+case 4://4、查找联系人
+	findPerson(&abs);
+	break;
+```
+
+查找指定联系人信息函数总代码：
+
+```c++
+//4.查找指定联系人信息
+void findPerson(Addressbooks*abs)
+{
+	cout << "请输入您要查找的联系人" << endl;
+	string name;
+	cin >> name;
+
+	//判断指定的联系人是否存在
+	int ret = isExist(abs, name);
+	if (ret != -1)
+	{
+		cout << "姓名： " << abs->personArray[ret].m_Name << "\t";
+		cout << "性别： " << (abs->personArray[ret].m_Sex == 1 ? "男" : "女") << "\t";
+		cout << "年龄： " << abs->personArray[ret].m_Age << "\t";
+		cout << "电话： " << abs->personArray[ret].m_Phone << "\t";
+		cout << "住址： " << abs->personArray[ret].m_Addr << "\t" << endl;
+
+	}
+	else
+	{
+		cout << "查无此人" << endl;
+	}
+
+	system("pause");
+	system("cls");
+}
+```
+
+## 5.修改指定联系人信息
 
 改变联系人信息
 
-1. 封装修改联系人函数
+封装修改联系人函数
 
- ## 清空联系人
+同样用isEixit函数来判断是否找到类型人
+
+```c++
+//5.修改指定联系人信息
+void modifyPerson(Addressbooks * abs)
+{
+	cout << "请输入您要修改的联系人" << endl;
+	string name;
+	cin >> name;
+	int ret = isExist(abs, name);
+	if (ret != -1)//找到
+	{
+
+		//姓名
+		string name;
+		cout << "请输入姓名：" << endl;
+		cin >> name;
+		abs->personArray[ret].m_Name = name;
+		//性别
+		cout << "请输入性别：" << endl;
+		cout << "1 --- 男" << endl;
+		cout << "2 --- 女" << endl;
+		int sex = 0;
+		while (true)
+		{
+			//如果输入1或者2退出循环
+			//如果有误要重新输入
+			cin >> sex;
+			if (sex == 1 || sex == 2)
+			{
+				abs->personArray[ret].m_Sex = sex;
+				break;
+			}
+			cout << "输入有误，请重新输入" << endl;
+		}
+		//年龄 
+		cout << "请输入年龄：" << endl;
+		int age = 0;
+		cin >> age;
+		abs->personArray[ret].m_Age = age;
+		//电话
+		cout << "请输入联系电话：" << endl;
+		string phone;
+		cin >> phone;
+		abs->personArray[ret].m_Phone = phone;
+		//住址
+		cout << "请输入家庭住址：" << endl;
+		string address;
+		cin >> address;
+		abs->personArray[ret].m_Addr = address;
+
+		cout << "修改成功！" << endl;
+	}
+	else
+	{
+		cout << "查无此人" << endl;
+	}
+	system("pause");
+	system("cls");
+
+}
+```
+
+
+
+ ## 6.清空联系人
 
 封装情况联系人函数
 
 思路：把通讯录记录的联系人数量重置为0
+
+```c++
+//6.清空所有联系人
+void cleanPerson(Addressbooks* abs)
+{
+	abs->m_Size = 0;//将当前记录的联系人数量重置为0
+	cout << "通讯录已清空" << endl;
+
+	system("pause");
+	system("cls")；
+}
+```
+
+
+
+## 总代码
+
+```c++
+//封装函数显示界面
+
+//在main函数中调用封装好的函数
+
+#include<iostream>
+using namespace std;
+#define MAX 1000
+
+
+//菜单界面
+void showMenu()
+{
+	cout << "*****************************" << endl;
+	cout << "*****   1、添加联系人   *****" << endl;
+	cout << "*****   2、显示联系人   *****" << endl;
+	cout << "*****   3、删除联系人   *****" << endl;
+	cout << "*****   4、查找联系人   *****" << endl;
+	cout << "*****   5、修改联系人   *****" << endl;
+	cout << "*****   6、清空联系人   *****" << endl;
+	cout << "*****   0、退出通讯录   *****" << endl;
+	cout << "*****************************" << endl;
+
+}
+
+//联系人的结构体
+struct Person
+{
+	string m_Name;
+
+	//性别 1 男 2女
+	int m_Sex;
+
+	int m_Age;
+	//电话
+	string m_Phone;
+	//地址
+	string m_Addr;
+};
+
+struct Addressbooks
+{
+	//通讯录中保存的联系人的数组
+	struct Person personArray[MAX];
+
+	//通讯录中当前记录联系人个数
+	int m_Size;
+
+};
+
+//1.添加联系人
+void addPerson(Addressbooks* abs)
+{
+	//判断通讯录是否已满，如果满了就不再添加
+	if (abs->m_Size == MAX)
+	{
+		cout << "通讯录已满，无法添加！" << endl;
+		return;
+	}
+	else
+	{
+		//添加具体联系人
+
+		//姓名
+		string name;
+		cout << "请输入姓名：" << endl;
+		cin >> name;
+		abs->personArray[abs->m_Size].m_Name = name;
+		//性别
+		cout << "请输入性别：" << endl;
+		cout << "1 --- 男" << endl;
+		cout << "2 --- 女" << endl;
+		int sex = 0;
+		
+		while (true)
+		{
+			//如果输入1或者2退出循环
+			//如果有误要重新输入
+			cin >> sex;
+			if (sex == 1 || sex == 2)
+			{
+				abs->personArray[abs->m_Size].m_Sex = sex;
+				break;
+			}
+			cout << "输入有误，请重新输入" << endl;
+		}
+		
+
+
+		//年龄
+		cout << "请输入年龄：" << endl;
+		int age = 0;
+		cin >> age;
+		abs->personArray[abs->m_Size].m_Age = age;
+		//电话
+		cout << "请输入联系电话：" << endl;
+		string phone;
+		cin >> phone;
+		abs->personArray[abs->m_Size].m_Phone = phone;
+		//住址
+		cout << "请输入家庭住址：" << endl;
+		string address;
+		cin >> address;
+		abs->personArray[abs->m_Size].m_Addr = address;
+
+		//更新通讯录人数
+		abs->m_Size++;
+		cout << "添加成功" << endl;
+
+		system("pause");//按任意键继续
+		system("cls");//清屏
+	}
+}
+
+//2.显示所有联系人
+void showPerson(Addressbooks* abs)//传入通讯录
+{
+	
+	//判断人数
+	if (abs->m_Size == 0)
+	{
+		cout << "当前记录为空" << endl;
+	}
+	else
+	{
+		for (int i = 0; i < abs->m_Size; i++)
+		{
+			
+			cout << "姓名： " <<abs->personArray[i].m_Name<< "\t";
+			cout << "性别： " << (abs->personArray[i].m_Sex==1?"男" : "女") << "\t";
+			cout << "年龄： " << abs->personArray[i].m_Age << "\t";
+			cout << "电话： " << abs->personArray[i].m_Phone << "\t";
+			cout << "住址： " << abs->personArray[i].m_Addr << "\t"<<endl;
+		}
+	}
+	system("pause");//按任意键继续
+	system("cls");
+}
+
+//检测联系人是否存在
+//参数1 通讯录 参数2 对比姓名
+int isExist(Addressbooks* abs,string name)
+{
+	for (int i = 0; i < abs->m_Size; i++)
+	{
+		if (abs->personArray[i].m_Name == name)
+		{
+			return i;//找到，返回这个人在数组中的下标
+		}	
+	}
+	return -1;//没找到返回-1
+}
+
+//3.删除指定联系人
+void deletePerson(Addressbooks * abs)
+{
+	cout << "请输入您要删除的联系人" << endl;
+	string name;
+	cin >> name;
+	int ret = isExist(abs, name);//ret == -1未查到  ret != -1查到
+	if (ret!=-1)
+	{
+		//查找到人，删除
+		for (int i = ret; i < abs->m_Size; i++)
+		{
+			//数据前移
+			abs->personArray[i] = abs->personArray[i + 1];
+		}
+		abs->m_Size--;//更新联系人数目
+		cout << "删除成功" << endl;
+	}
+	else
+	{
+		cout << "查无此人" << endl;
+	}
+
+	system("pause");
+	system("cls");
+}
+
+//4.查找指定联系人信息
+void findPerson(Addressbooks*abs)
+{
+	cout << "请输入您要查找的联系人" << endl;
+	string name;
+	cin >> name;
+
+	//判断指定的联系人是否存在
+	int ret = isExist(abs, name);
+	if (ret != -1)
+	{
+		cout << "姓名： " << abs->personArray[ret].m_Name << "\t";
+		cout << "性别： " << (abs->personArray[ret].m_Sex == 1 ? "男" : "女") << "\t";
+		cout << "年龄： " << abs->personArray[ret].m_Age << "\t";
+		cout << "电话： " << abs->personArray[ret].m_Phone << "\t";
+		cout << "住址： " << abs->personArray[ret].m_Addr << "\t" << endl;
+
+	}
+	else
+	{
+		cout << "查无此人" << endl;
+	}
+
+	system("pause");
+	system("cls");
+}
+
+//5.修改指定联系人信息
+void modifyPerson(Addressbooks * abs)
+{
+	cout << "请输入您要修改的联系人" << endl;
+	string name;
+	cin >> name;
+	int ret = isExist(abs, name);
+	if (ret != -1)//找到
+	{
+
+		//姓名
+		string name;
+		cout << "请输入姓名：" << endl;
+		cin >> name;
+		abs->personArray[ret].m_Name = name;
+		//性别
+		cout << "请输入性别：" << endl;
+		cout << "1 --- 男" << endl;
+		cout << "2 --- 女" << endl;
+		int sex = 0;
+		while (true)
+		{
+			//如果输入1或者2退出循环
+			//如果有误要重新输入
+			cin >> sex;
+			if (sex == 1 || sex == 2)
+			{
+				abs->personArray[ret].m_Sex = sex;
+				break;
+			}
+			cout << "输入有误，请重新输入" << endl;
+		}
+		//年龄 
+		cout << "请输入年龄：" << endl;
+		int age = 0;
+		cin >> age;
+		abs->personArray[ret].m_Age = age;
+		//电话
+		cout << "请输入联系电话：" << endl;
+		string phone;
+		cin >> phone;
+		abs->personArray[ret].m_Phone = phone;
+		//住址
+		cout << "请输入家庭住址：" << endl;
+		string address;
+		cin >> address;
+		abs->personArray[ret].m_Addr = address;
+
+		cout << "修改成功！" << endl;
+	}
+	else
+	{
+		cout << "查无此人" << endl;
+	}
+	system("pause");
+	system("cls");
+
+}
+
+
+//6.清空所有联系人
+void cleanPerson(Addressbooks* abs)
+{
+	abs->m_Size = 0;//将当前记录的联系人数量重置为0
+	cout << "通讯录已清空" << endl;
+
+	system("pause");
+	system("cls");
+}
+
+int main()
+{
+
+	//创建通讯录结构体变量
+	Addressbooks abs;
+	//初始化当前人员个数
+	abs.m_Size = 0;
+
+
+
+	int select = 0;//用户选择输入的变量
+
+	while (true)
+	{
+		//菜单调用
+		showMenu();
+
+		cin >> select;
+		
+		switch (select)
+		{
+		case 1://1、添加联系人
+			addPerson(&abs);//地址传递，可以改变实参
+			break;
+		case 2://2、显示联系人
+			showPerson(&abs);
+			break;
+		case 3://3、删除联系人
+			deletePerson(&abs);
+			break;
+		case 4://4、查找联系人
+			findPerson(&abs);
+			break;
+		case 5://5、修改联系人
+			modifyPerson(&abs);
+			break;
+		case 6://6、清空联系人
+			cleanPerson(&abs);
+			break;
+		case 0://0、推出通讯录
+			cout << "欢迎下次使用" << endl;
+			system("pause");
+			return 0;
+			break;
+
+		default:
+			break;
+		}
+	}
+
+	
+
+	system("pause");
+	return 0;
+}
+```
 
