--- a/c++/核心.md
+++ b/c++/核心.md
@@ -1649,3 +1649,482 @@ int main()
 
 ### 4.5.4 赋值运算符重载
 
+编译器提供的赋值是浅拷贝操作，如果有属性创建在堆区就有可能出现堆区内存重复释放问题，因此需要赋值运算符重载。
+
+```c++
+class Person
+{
+public:
+    Person(int age)
+    {
+        m_Age = new int(age);//在堆区开辟内存，需要手动开辟释放
+    }
+    ~Person()
+    {
+        if(m_Age != NULL)
+        {
+            delete m_Age;
+            m_Age = NULL;
+        }
+    }
+    int *m_Age;
+};
+void test01()
+{
+    
+    Person p1(18);
+    
+    Person p2(20);
+    
+    p2 = p1;//赋值操作
+    
+    cout << "p1 age=" << *p1.m_Age <<endl;
+    cout << "p2 age=" << *p2.m_Age <<endl;
+}
+int main()
+{
+    test01();
+    
+}
+
+```
+
+加上自己写的析构函数`~Person()`后，执行错误
+
+因为编译器提供的赋值运算符是浅拷贝，使得p1和p2都指向同一块内存，导致堆区内存重复释放
+
+解决方案：利用深拷贝解决浅拷贝带来的问题，重新在堆区开辟一给空间，存储数据18
+
+需要自己写一个等号赋值运算
+
+```c++
+	//重载 赋值运算符
+	void operator=(Person &p)
+    {
+        //应该先判断是否有属性在堆区，如果有先释放干净，然后再深拷贝
+        if(m_Age != NULL)
+        {
+            delete m_Age;
+            m_Age = NULL;
+        }
+        //深拷贝
+        m_Age = new int(*p.m_Age);
+    }
+```
+
+对于内置的数据类型允许连等操作，但是对于自定的数据类型不能连等，因为重载函数返回void，只要在重载函数最后返回对象本身     
+
+`Person& operator=(Person &p){}`
+
+`return *this;`
+
+```c++ 
+int main()
+{
+    int a = 10;
+    int b = 20;
+    int c = 30;
+    
+    c = b = a;
+    cout << "a = " << a <<endl;
+    cout << "b = " << b <<endl;
+    cout << "c = " << c <<endl;
+}
+输出：
+    10
+    10
+    10
+```
+
+```c++
+class Person
+{
+public:
+    Person(int age)
+    {
+        m_Age = new int(age);//在堆区开辟内存，需要手动开辟释放
+    }
+    ~Person()
+    {
+        if(m_Age != NULL)
+        {
+            delete m_Age;
+            m_Age = NULL;
+        }
+    }
+    //重载 赋值运算符
+	Person& operator=(Person &p)
+    {
+        //应该先判断是否有属性在堆区，如果有先释放干净，然后再深拷贝
+        if(m_Age != NULL)
+        {
+            delete m_Age;
+            m_Age = NULL;
+        }
+        //深拷贝
+        m_Age = new int(*p.m_Age);
+        //返回自身
+        return *this;
+    }
+    int *m_Age;
+};
+void test01()
+{
+    
+    Person p1(18);
+    
+    Person p2(20);
+    
+    Person p3(30);
+    
+    p2 = p1;//赋值操作
+    
+    cout << "p1 age=" << *p1.m_Age <<endl;
+    cout << "p2 age=" << *p2.m_Age <<endl;
+    cout << "p3 age=" << *p3.m_Age <<endl;
+}
+int main()
+{
+    test01();
+    
+}
+
+输出：
+    18
+    18
+    18
+```
+
+### 4.5.5 关系运算符重载
+
+== 、 >  、 <
+
+作用：重载关系运算符，可以让两个自定义类型对象进行对比操作
+
+### 4.5.6 函数调用运算符重载
+
+- 函数调用运算符()也可以重载
+- 由于重载后使用的方式非常像函数的调用，因此称为仿函数
+- 仿函数没有固定写法，非常灵活
+
+仿函数在STL中应用较多   
+
+创建匿名函数对象 类名+() 当前行执行完立即被释放
+
+匿名对象调用 类名()(.......)
+
+## 4.6 继承
+
+继承是面向对象的三大特性之一
+
+有些类与类之间存在特殊的关系，例如：动物类，有猫类，狗类，猫类、狗类有动物的共性也有自己的特性。
+
+在定义类时，如果下级别的成员除了拥有上一级的共性，还有自己的特性。这个时候就可以考虑利用继承的技术，减少重复代码。
+
+### 4.6.1 继承的基本语法
+
+许多网页都有公共的头部、底部，甚至左侧列表，只有中心内容不同
+
+语法：class 子类 : 继承方式 父类
+
+子类也称为派生类
+
+父类也称为基类
+
+派生类中的成员包含 从基类继承的，一类是自己特有的成员
+
+继承过来的表现其共性，新增的表现了其个性
+
+```c++
+//继承实现页面
+//公共页面，页面共同点
+class BasePage
+{
+public:
+    void header()
+    {
+        cout << "(公共头部)" << endl;
+    }
+    void footer()
+    {
+        cout << "(公共底部)" << endl;
+    }
+    void left()
+    {
+        cout << "(公共分类列表)" << endl;
+    }        
+};
+//Java页面
+class Java : public BasePage
+{
+public:
+    void content()
+    {
+        cout << "Java学科视频" << endl;
+    }
+}
+//Python页面
+class Python : public BasePage
+{
+public:
+    void content()
+    {
+        cout << "Python学科视频" << endl;
+    }
+}
+//C++页面
+class CPP : public BasePage
+{
+public:
+    void content()
+    {
+        cout << "CPP学科视频" << endl;
+    }
+}
+
+void test01()
+{
+    Java ja;
+    ja.header();
+    ja.footer();
+    ja.left();
+    ja.content();
+    
+    Python py;
+    py.header();
+    py.footer();
+    py.left();
+    py.content();
+    
+}
+int main()
+{
+    test01();
+}
+```
+
+### 4.6.2 继承方式
+
+无论哪种继承方式，父类的私有成员属性，子类不可访问
+
+- 公共继承。父类的公共和保护权限成员到子类中仍是公共和保护权限，父类的私有权限成员子类不可访问。
+- 保护继承。父类公共权限成员到子类变为保护权限，保护权限成员到子类仍为保护权限，父类的私有权限成员子类不可访问。
+- 私有继承。父类公共和保护权限成员到子类变为私有权限，父类的私有权限成员子类不可访问。
+
+ 
+
+### 4.6.3 继承中的对象模型
+
+从父类继承过来的成员，哪些属于子类对象中
+
+```c++
+class Base
+{
+public:
+	int m_A;
+protected:
+	int m_B;
+private:
+	int m_C;
+};
+class Son :public Base
+{
+public:
+	int m_D;
+};
+void test01()
+{
+    cout << "size of Son =" << sizeof(Son) << endl; 
+}
+
+int main()
+{
+    test01();
+}
+```
+
+输出： 16
+
+- 父类中所有非静态成员属性 子类都会继承。
+
+- 父类中私有成员属性是被编译器给隐藏了，因此是访问不到，但是确实被继承下去了
+
+也可以用 `开发人员命令提示符工具` 来看类对象的分布布局
+
+跳转盘符 
+
+`F:`
+
+跳转文件具体路径  
+
+`cd 具体路径`
+
+查看命令
+
+`cl /d1 reportSingleClassLayout类名 文件名`
+
+结论：父类中私有成员是被编译器给隐藏了，因此是访问不到，但是确实被继承下去了
+
+### 4.6.4 继承中构造和析构顺序
+
+父类构造
+
+子类构造
+
+子类析构
+
+父类析构
+
+总结：继承中先调用父类构造函数，再调用子类构造函数，析构顺序与构造相反
+
+### 4.6.5 继承中同名成员处理方式
+
+当子类与父类出现同名的成员，如何通过子类对象，访问到子类或父类中同名的数据呢？
+
+- 访问子类同名成员：直接访问即可
+- 访问父类同名成员：需要加作用域 
+- 如果子类中出现和父类同名的成员函数，子类同名成员会隐藏掉父类中所有的同名成员函数，调用需要加作用域
+
+```c++
+class Base
+{	
+public:
+	Base()
+	{
+		m_A = 100;
+	}
+
+	void func()
+	{
+		cout << "Base-func()调用" << endl;
+	}
+
+	void func(int a)
+	{
+		cout << "Base-func(int a)调用" << endl;
+	}
+	int m_A;
+
+};
+class Son :public Base
+{
+public:
+	void func()
+	{
+		cout << "Son-func()调用" << endl;
+	}
+
+	int m_A=20;
+};
+
+void test0011()
+{
+	Son s;
+	cout << "Son下的m_A = " << s.m_A << endl;
+	cout << "Base下的m_A = " << s.Base::m_A << endl;
+}
+
+void test0022()
+{
+	Son s;
+	s.func();//直接调用 调用的是子类中的同名函数
+	s.Base::func();
+	//s.func(100);//error 如果子类中出现和父类同名的成员函数，子类同名成员会隐藏掉父类中所有的同名成员函数
+    s.Base::func(100);
+}
+int main()
+{
+	test0011();
+	test0022();
+}
+```
+
+### 4.6.5 继承中静态成员处理方式
+
+继承中同名的静态成员变量在子类对象上如何进行访问
+
+静态成员和非静态成员出现同名，处理方式一致
+
+另外还有通过类名访问的方法
+
+`cout << "Base下的m_A = " << Son::Base::m_A << endl;//第一个::通过类名访问  第二个::代表访问父类作用域下`
+
+如果子类中出现和父类同名的成员函数，子类同名成员会隐藏掉父类中所有的同名成员函数
+访问父类中被隐藏的同名成员，需要加作用域
+
+```c++
+class Base
+{
+	
+public:
+	
+	static int m_A;
+
+	static void func()
+	{
+		cout << "Base-func()调用" << endl;
+	}
+	static void func(int a)
+	{
+		cout << "Base-func(int a)调用" << endl;
+	}
+};
+int Base::m_A = 100;
+
+class Son :public Base
+{
+public:
+	
+	static int m_A;
+	static void func()
+	{
+		cout << "Son-func()调用" << endl;
+	}
+	
+};
+int Son::m_A = 200;
+
+//同名
+void test0011()
+{
+	//1.通过对象访问
+	Son s;
+	cout << "Son下的m_A = " << s.m_A << endl;
+	cout << "Base下的m_A = " << s.Base::m_A << endl;
+
+	//2.通过类名访问
+	cout << "Son下的m_A = " << Son::m_A << endl;
+	cout << "Base下的m_A = " << Son::Base::m_A << endl;//第一个::通过类名访问  第二个::代表访问父类作用域下
+}
+void test0022()
+{
+	Son s;
+	//1.通过对象
+	s.func();
+	s.Base::func();
+	
+	//2.通过类名
+	Son::func();
+	Son::Base::func();
+
+	//如果子类中出现和父类同名的成员函数，子类同名成员会隐藏掉父类中所有的同名成员函数
+	//访问父类中被隐藏的同名成员，需要加作用域
+	Son::func(100);//error
+	Son::Base::func(100);
+}
+int main()
+{
+	test0011();
+	test0022();
+}
+```
+
+总结：同名静态成员处理方式和非静态处理方式一样，只不过有两种访问的方式(通过对象和类名)
+
+### 4.6.7 多继承语法
+
+c++允许一个类继承多个类
+
+语法：class 子类 : 继承方式 父类1,继承方式 父类2....
+
+多继承可能会引发父类中有同名成员出现，需要加作用域区分
