--- a/c++/核心.md
+++ b/c++/核心.md
@@ -2128,3 +2128,38 @@ c++允许一个类继承多个类
 语法：class 子类 : 继承方式 父类1,继承方式 父类2....
 
 多继承可能会引发父类中有同名成员出现，需要加作用域区分
+
+### 4.6.8 菱形继承
+
+概念：两个派生类继承同一个基类，又有某个类同时继承两个派生类(多继承)，这种继承被称为菱形继承，或者钻石继承。
+
+虚继承，继承前加上关键字 virtual 变为虚继承 ，虚继承继承的基类(父类)称为虚基类
+
+vbtpr虚基类指针，指向vbtable虚基类表
+
+## 4.7多态
+
+# 5. 文件操作
+
+对文件操作需要包含头文件<fstream>
+
+1.文本文件-文件以文本的ASCII码存储在计算机中
+
+2.二进制文件-文件以文本的二进制形式存储在计算机中
+
+操作文件的三大类
+
+1.ofstream:写文件
+
+2.ifstream:读文件
+
+3.fstream:读写文件
+
+# 类模板
+
+案例
+
+```
+
+```
+
